2004-03-06  Martin Baulig  <martin@ximian.com>

	* configure.in: AC_SUBST(debugger_prefix).
	* src/Main/Base/Services/Makefile.am: Use full path name for Mono.Debugger.dll.

	* src/Main/Base/Gui/Workbench/DefaultWorkbench.cs: connect to the
	debugger's StoppedEvent.
	* src/AddIns/DisplayBindings/SourceEditor/Gui/Pads/DebuggerVariablePad.cs:
	connect to the debugger's ResumedEvent and StoppedEvent.

	* Main/Base/Commands/DebuggerCommands.cs: added KillApplication
	and hook it to the DebuggingService.
	* build/AddIns/SharpDevelopCore.addin: added menu item to the
	debugging menu to kill the application.	

2004-03-05  John BouAntoun  <jba-mono@optusnet.com.au>
	
	* src/Main/Base/Gui/Components/OpenFileTab.cs : deleted (duplicates TabLabel)
	* src/Main/Base/Commands/FileTabStripCommands.cs : deleted because OpenFileTab deleted
	* src/Main/Base/Makefile.am : removed file refs from compilation
	* build/AddIns/SharpDevelopCore.addin: removed file refs from addins

2004-03-05  John BouAntoun  <jba-mono@optusnet.com.au>
	
	* src/AddIns/DisplayBindings/SourceEditor/Gui/Dialogs/ReplaceDialog.cs : 
	changed Gtk.Combo's to Gnome.Entry's to fix bug where MD would lock up with 
	hidden "Not Found" Dialog popping up under the find dialog
	* src/AddIns/DisplayBindings/SourceEditor/Gui/Dialogs/ReplaceInFilesDialog.cs: 
	as above
	* data/resources/glade/texteditoraddin.glade : as above

2004-03-05  John Luke  <jluke@cfl.rr.com>
	
	* src/Main/Base/Gui/Dialogs/ReferenceDialog/AssemblyReferencePanel.cs:
	apply patch from djj734@mail.usask.ca (Doug) to fix adding a .NET
	assembly reference by using GetFullPath, bug #55192

2004-03-05  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add StepInto and
	implement StepOver.  Use proc.CurrentFrame where possible.

2004-03-05  John BouAntoun  <jba-mono@optusnet.com.au>

	* src/Main/Base/Gui/Dialogs/ProjectOptionsDialog.cs : added configuration 
	renaming