@@ -1,3 +1,8 @@
+2004-03-07  Todd Berman  <tberman@sevenl.net>
+
+	* src/Main/Base/Gui/Workbench/DefaultWorkbench.cs:
+		Removing windows dependencies. (ToUpper)
+
 2004-03-06  Martin Baulig  <martin@ximian.com>
 
 	* configure.in: AC_SUBST(debugger_prefix).
